# Bookly

./: .gitignore  PAYMENT_SETUP_GUIDE.md  README.md  STRIPE_INTEGRATION.md
backend/: .env  main.py  pyproject.toml
backend/app/: main.py
backend/app/api/: auth.py  books.py  cart.py  payment.py  reviews.py  routers.py
backend/app/core/: config.py  security.py  stripe.py
backend/app/db/: base.py  session.py
backend/app/models/: book.py  cart.py  cart_items.py  orders.py  review.py  user.py
backend/app/schemas/: book.py  cart.py  order.py  review.py  user.py
backend/app/utils/: adminCheck.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/register/: page.tsx
frontend/app/admin/books/: page.tsx
frontend/app/auth/google/callback/: page.tsx
frontend/app/books/: page.tsx
frontend/app/books/[id]/: page.tsx
frontend/app/cart/: page.tsx
frontend/app/checkout/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/orders/[id]/: page.tsx
frontend/components/: CheckoutButton.tsx  ConfirmModal.tsx  Footer.tsx  Modal.tsx  SiteHeader.tsx  Toast.tsx
frontend/components/auth/: error-modal.tsx  google-sign-in-button.tsx  login-form.tsx  register-form.tsx
frontend/lib/: api.ts
frontend/lib/api/: cart.ts  payment.ts  reviews.ts
