[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.129.0",
    "fastapi-users[sqlalchemy]>=15.0.4",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.29.0",
    "httpx-oauth>=0.14.1",
    "dotenv>=0.9.9",
]
